[gd_scene load_steps=27 format=2]

[ext_resource path="res://ui/metricviz_components/scripts/metricviz_linechart.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/default.tres" type="Theme" id=2]
[ext_resource path="res://assets/graphics/trail.png" type="Texture" id=3]
[ext_resource path="res://assets/shaders/time-graph-bar.tres" type="Material" id=4]
[ext_resource path="res://assets/graphics/1px.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/sci-fi/xsmall_pixels.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/sci-fi/extra_border.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/sci-fi/extra_border2.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/sci-fi/small-crosses_repeat.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.00392157, 0.105882, 0.184314, 0.823529 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="CanvasItemMaterial" id=34]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=35]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 50.0
margin_top = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=37]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_right = 50.0
margin_bottom = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFontData" id=38]
font_path = "res://assets/fonts/GemunuLibre-Medium.ttf"

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = SubResource( 38 )

[sub_resource type="CanvasItemMaterial" id=29]
blend_mode = 1

[sub_resource type="DynamicFontData" id=40]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=27]
size = 38
use_mipmaps = true
use_filter = true
extra_spacing_top = -9
extra_spacing_char = 2
font_data = SubResource( 40 )

[sub_resource type="DynamicFontData" id=41]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=30]
size = 28
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 1
font_data = SubResource( 41 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.223529, 0.588235, 0.87451, 0.0509804 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="CanvasItemMaterial" id=21]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=24]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 50.0
margin_top = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_right = 50.0
margin_bottom = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="MetricViz-LineChart" type="Control" groups=[
"metricviz",
"metricviz_linechart",
]]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
material = ExtResource( 4 )
color = Color( 1, 1, 1, 0.466667 )
texture = ExtResource( 5 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 2
z_as_relative = false
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 2

[node name="Info" type="Node2D" parent="."]
visible = false
z_index = 20

[node name="InfoLine" type="Line2D" parent="Info"]
points = PoolVector2Array( 0, 0, 0, 20 )
width = 2.0
default_color = Color( 0.372549, 0.729412, 0.92549, 1 )

[node name="Background" type="Panel" parent="Info"]
margin_left = 8.0
margin_right = 208.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Info/Background"]
modulate = Color( 0.101961, 0.670588, 1, 0.121569 )
material = SubResource( 34 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra" type="Panel" parent="Info/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 35 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra2" type="Panel" parent="Info/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 35 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 5.0
margin_right = 44.0
margin_bottom = 27.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.752941, 0.94902, 1, 1 )
custom_fonts/font = SubResource( 20 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowHideTween" type="Tween" parent="."]

[node name="AnimTween" type="Tween" parent="."]

[node name="MarginContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricNameLabel" type="Label" parent="MarginContainer"]
material = SubResource( 29 )
margin_right = 226.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 55 )
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 27 )
text = "Total Instances"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricDateRangeLabel" type="Label" parent="MarginContainer/MetricNameLabel"]
modulate = Color( 1, 1, 1, 0.784314 )
use_parent_material = true
margin_top = 30.2906
margin_right = 225.0
margin_bottom = 67.2906
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 30 )
text = "Date range"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="MarginContainer"]
margin_top = 59.0
margin_right = 226.0
margin_bottom = 200.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pos" type="VBoxContainer" parent="MarginContainer/Background/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 221.0
margin_bottom = 136.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="MarginContainer" parent="MarginContainer/Background/MarginContainer/Pos"]
margin_right = 216.0
margin_bottom = 127.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attacher" type="Control" parent="MarginContainer/Background/MarginContainer/Pos"]
margin_top = 131.0
margin_right = 216.0
margin_bottom = 131.0
mouse_filter = 2

[node name="SelectedTimeStampLine" type="Line2D" parent="MarginContainer/Background/MarginContainer/Pos/Attacher"]
visible = false
z_index = 10
z_as_relative = false
points = PoolVector2Array( 0, -384, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="Dot" type="Polygon2D" parent="MarginContainer/Background/MarginContainer/Pos/Attacher/SelectedTimeStampLine"]
z_index = 21
z_as_relative = false
polygon = PoolVector2Array( -4, 0, 0, -4, 4, 0, 0, 4 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Background"]
modulate = Color( 0.101961, 0.670588, 1, 0.121569 )
material = SubResource( 21 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra" type="Panel" parent="MarginContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 24 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra2" type="Panel" parent="MarginContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 24 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_completed" from="ShowHideTween" to="." method="_on_ShowHideTween_tween_completed"]
[connection signal="gui_input" from="MarginContainer/Background" to="." method="_on_ColorRect_gui_input"]
[connection signal="mouse_exited" from="MarginContainer/Background" to="." method="_on_Background_mouse_exited"]
